# capstone-web/src/main/java/am/capstone/project/controller/CourseController.java
@@ -1,12 +1,13 @@
 package am.capstone.project.controller;
 
-
+import am.capstone.project.model.Course;
 import am.capstone.project.service.CourseService;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.*;
+import java.util.Set;
 
-@RequestMapping("/courses")
+@RequestMapping("api/courses")
 @Controller
 public class CourseController {
 
@@ -20,5 +21,20 @@ public class CourseController {
     public String studentsIndex(Model model) {
         model.addAttribute("courses", courseService.findAll());
         return "students/index";
+    }
+
+    @GetMapping
+    public Set<Course> getCourses() {
+        return courseService.findAll();
+    }
+
+    @GetMapping("/{id}")
+    public Course getCourseById(Long id) {
+        return courseService.findById(id);
+    }
+
+    @PostMapping
+    public Course saveCourse(@RequestBody Course course) {
+        return courseService.save(course);
     }
 }
