# spring-web-task-1/api_specification.yaml
@@ -107,9 +107,110 @@ paths:
         404:
           description: Not Found
       security: []
+  /api/courses:
+    get:
+      tags:
+        - Courses
+      summary: List of Courses
+      description: Get a list of all Courses
+      operationId: listStudentsV1
+      parameters:
+        - name: pageNumber
+          in: query
+          description: Page Number
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            format: int32
+            default: 1
+        - name: pageSize
+          in: query
+          description: Page Size
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            format: int32
+            default: 25
+      responses:
+        200:
+          description: List of Courses
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CoursePagedList'
+      security: []
+
+    post:
+      tags:
+        - Courses
+      summary: New Course
+      description: Create a new Course
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Courses'
+        required: true
+      responses:
+        201:
+          description: Course Created
+          headers:
+            Location:
+              description: Location of the created Course
+              schema:
+                type: string
+                format: uri
+        400:
+          description: Bad Request
+        409:
+          description: Conflict
+  /api/courses/{id}:
+    get:
+      tags:
+        - Courses
+      summary: Get Course by Id
+      description: Get a single course by Id
+      parameters:
+        - name: id
+          in: path
+          description: Course Id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Found Course
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Courses'
+        404:
+          description: Not Found
+      security: []
 
 components:
   schemas:
+    Courses:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        instructor:
+          type: object
+        credits:
+          type: int32
+        capacity:
+          type: int32
+
     Administrator:
       type: object
       properties:
@@ -121,6 +222,22 @@ components:
           type: string
         phone:
           type: string
+    CourseList:
+      maxItems: 500
+      minItems: 1
+      type: array
+      description: List of Students
+      items:
+        $ref: '#/components/schemas/Courses'
+
+    CoursePagedList:
+      type: object
+      properties:
+        content:
+          $ref: '#/components/schemas/CourseList'
+      allOf:
+        - $ref: '#/components/schemas/PagedResponse'
+
 
     AdministratorList:
       maxItems: 100
